# relational-transformer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
byod/: colab.ipynb  mini-shop.duckdb
docs/: baselines.md  context-visualization.md  downloads.md  inference.md  preprocess.md  pretrain.md  recipe_rt_j.txt  train.md
examples/byod/: colab.ipynb
examples/inference/: 0_make_demo_labels.py  1_data_prep.py  2_task_prep.py  3_predict.py  README.md  config.py
rel2tab/: README.md  __init__.py  config.py  featurize.py
rel2tab/featurizers/: __init__.py  entity_featurizer.py  global_featurizer.py  precomputed_featurizer.py  rdblearn_featurizer.py  rt_featurizer.py  sql_featurizer.py
rel2tab/featurizers/sql_queries/: __init__.py  rel_avito.py  rel_f1.py  rel_stack.py
rel2tab/predictors/: __init__.py  identity_predictor.py  lgbm_predictor.py  linear_predictor.py  mean_predictor.py  ridge_predictor.py  tab_predictor.py  tabicl_batched_predictor.py  xgboost_predictor.py  xgboost_tuned.py
rt/: checkpoints.py  config.py  data.py  embed.py  eval_utils.py  evaluator.py  main.py  model.py  muon.py  recipe_rt_j.txt  recipes.py  swa.py  tasks.py
rustler/: Cargo.toml
rustler/src/: fly.rs  lib.rs  main.rs  pre.rs
scripts/: baseline.py  ctx_viz.py  eval.py  mlock_recipe.py  preprocess.py  pretrain.py  slurm_preprocess.sh  slurm_pretrain.sh
src/rt/: __init__.py  baseline.py  checkpoints.py  config.py  ctx_viz.py  data.py  embed.py  eval.py  eval_utils.py  evaluator.py  mlock.py  mlock_recipe.py  model.py  pre.py  preprocess.py  pretrain.py  swa.py  tasks.py
src/rt/cli/: __init__.py  baseline.py  ctx_viz.py  eval.py  mlock.py  mlock_recipe.py  preprocess.py  pretrain.py  train.py
src/rt/cli/legacy/: _driver.py  eval_plurel.py  eval_v1.py  preprocess.py
src/rt/ctx_viz/: __init__.py  index.html
src/rt/data/: __init__.py  datasets.py  mlock.py  resolve.py  tasks.py
src/rt/eval/: __init__.py  evaluator.py  main.py  metrics.py  relbench.py
src/rt/model/: __init__.py  checkpoints.py  net.py
src/rt/model/legacy/: __init__.py  _common.py  plurel.py  v1.py
src/rt/preprocess/: __init__.py  embed.py  main.py
src/rt/preprocess/legacy/: __init__.py  main.py
src/rt/rel2tab/: README.md  __init__.py  config.py  featurize.py  featurizer.py  featurizers.py  model.py  predictor.py  predictors.py
src/rt/rel2tab/featurizers/: __init__.py  entity_featurizer.py  global_featurizer.py  precomputed_featurizer.py  rdblearn_featurizer.py  rt_featurizer.py  sql_featurizer.py
src/rt/rel2tab/featurizers/sql_queries/: __init__.py  rel_amazon.py  rel_event.py  rel_hm.py
src/rt/rel2tab/predictors/: __init__.py  identity_predictor.py  lgbm_predictor.py  linear_predictor.py  mean_predictor.py  ridge_predictor.py  tab_predictor.py  tabicl_batched_predictor.py  xgboost_predictor.py  xgboost_tuned.py
src/rt/rel2tab/sql_queries/: __init__.py  rel_trial.py
src/rt/train/: __init__.py  main.py  muon.py  swa.py
tests/: conftest.py  test_api.py  test_import_safety.py  test_rustler.py
