[project]
name = "rt"
version = "2.0.0"
dependencies = ["tabicl>=2.1.1,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# 3.12 only: strictfire imports the stdlib `pipes` module, removed in 3.13
# (PEP 594); a fresh solve on newer Python breaks at import. Tested on 3.12.
python = "3.12.*"
rust = "*"
maturin = "*"
uv = "*"
matplotlib = ">=3.11.0,<4"

[tool.pixi.pypi-dependencies]
rt = { path = ".", editable = true }
torch = "*"
safetensors = "*"
sentence-transformers = "*"
huggingface-hub = "*"
numpy = "*"
ml_dtypes = "*"
orjson = "*"
strictfire = "*"
fire = "*"
tyro = "*"
maturin_import_hook = "*"
einops = "*"
scikit-learn = "<1.6.0"
pandas = "*"
pyarrow = "*"
lazy_loader = "*"
tqdm = "*"
wandb = "*"
xgboost = "*"
# pinned until the relbench-hf branch (HF Hub data loading) lands in a relbench release
relbench = { git = "https://github.com/snap-stanford/relbench.git", rev = "6e4a3a3d271f981b7f61e2ecbb6fd1c0f1cd3eeb" }

[tool.pixi.tasks]
# Standalone preprocessor binary (polars + manifest reader; no FAISS).
build-pre = "cargo build --release --features pre --manifest-path rustler/Cargo.toml"
# Sampler Python extension (FAISS-free). The opt-in FAISS vector-db Sampler is
# built manually: `maturin develop --release -m rustler/Cargo.toml --features vecdb`
# (that path additionally needs cmake + a BLAS to build FAISS).
build-sampler = "maturin develop --uv --release -m rustler/Cargo.toml"
# Preprocess one dataset: download (HF or local) -> rustler -> embeddings.
preprocess = { cmd = "python scripts/preprocess.py one", depends-on = ["build-pre"] }
# Preprocess many datasets from a HuggingFace collection repo.
preprocess-many = { cmd = "python scripts/preprocess.py many", depends-on = ["build-pre"] }
# Upload an already-preprocessed dataset directory to a HuggingFace repo.
upload = "python scripts/preprocess.py upload"
# Context visualizer (serves an HTTP UI over preprocessed data).
ctx-viz = { cmd = "python scripts/ctx_viz.py", depends-on = ["build-sampler"] }
pretrain = { cmd = "torchrun --standalone --nproc-per-node=auto scripts/pretrain.py", depends-on = ["build-sampler"] }
# eval is single-process (one GPU) so per-item rows stay in task-table order.
eval = { cmd = "python scripts/eval.py", depends-on = ["build-sampler"] }
baseline = { cmd = "python scripts/baseline.py", depends-on = ["build-sampler"] }
