[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "relational-transformer"
version = "1.1.0"
description = "Relational Transformer (RT): a foundation model for relational data, bundling a native Rust data-processing engine (rt.rustler)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch",
    "safetensors",
    "huggingface-hub",
    "sentence-transformers",
    "numpy",
    "einops",
    "ml_dtypes",
    "orjson",
    "lazy_loader",
    "tqdm",
    "pyyaml",
    "tyro",
]

[project.optional-dependencies]
# `eval` (rt.eval) also needs relbench, a git dependency that can't be
# declared here (PyPI forbids URL deps) -- install it manually:
#   pip install "git+https://github.com/snap-stanford/relbench.git@<rev>"
eval = ["scikit-learn<1.6.0"]
# rel2tab tabular baselines (rt.cli.baseline); tabicl/tabpfn/rdblearn extras are
# research-only and not published -- install manually if needed.
baseline = ["scikit-learn<1.6.0", "xgboost", "pandas", "duckdb"]
# wandb logging for rt.cli.train (off by default).
train = ["wandb"]
test = ["pytest", "polars"]

[tool.maturin]
python-source = "src"
manifest-path = "rustler/Cargo.toml"
module-name = "rt.rustler"
# `pre` bundles the polars preprocess pyfunction; FAISS (`vecdb`) stays source-only.
features = ["pyo3/extension-module", "pre"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.12"
rust = "*"
maturin = "*"
uv = "*"
matplotlib = ">=3.11.0,<4"

[tool.pixi.pypi-dependencies]
relational-transformer = { path = ".", editable = true }
torch = "*"
safetensors = "*"
sentence-transformers = "*"
huggingface-hub = "*"
numpy = "*"
ml_dtypes = "*"
orjson = "*"
tyro = "*"
einops = "*"
scikit-learn = "<1.6.0"
pandas = "*"
pyarrow = "*"
polars = "*"
pytest = "*"
lazy_loader = "*"
tqdm = "*"
wandb = "*"
xgboost = "*"
# pinned until the relbench-hf branch (HF Hub data loading) lands in a relbench release
relbench = { git = "https://github.com/snap-stanford/relbench.git", rev = "6e4a3a3d271f981b7f61e2ecbb6fd1c0f1cd3eeb" }

[tool.pixi.tasks]
# Standalone preprocessor binary (polars + manifest reader; no FAISS).
build-pre = "cargo build --release --features pre --manifest-path rustler/Cargo.toml"
# Build + editable-install the rt package and the rt.rustler extension from the
# root maturin project (FAISS-free). The opt-in FAISS vector-db Sampler is built
# manually: `maturin develop --release --features vecdb` (needs cmake + a BLAS).
build-sampler = "maturin develop --uv --release"
# Preprocess one dataset: download (HF or local) -> rustler -> embeddings.
preprocess = { cmd = "python -m rt.cli.preprocess one", depends-on = ["build-sampler"] }
# Preprocess many datasets from a HuggingFace collection repo.
preprocess-many = { cmd = "python -m rt.cli.preprocess many", depends-on = ["build-sampler"] }
# Upload an already-preprocessed dataset directory to a HuggingFace repo.
upload = "python -m rt.cli.preprocess upload"
train = { cmd = "torchrun --standalone --nproc-per-node=auto -m rt.cli.train", depends-on = ["build-sampler"] }
# eval is single-process (one GPU) so per-item rows stay in task-table order.
eval = { cmd = "python -m rt.cli.eval", depends-on = ["build-sampler"] }
baseline = { cmd = "python -m rt.cli.baseline", depends-on = ["build-sampler"] }
test = { cmd = "pytest", depends-on = ["build-sampler"] }
