[package]
name = "rustler"
version = "1.0.0"
edition = "2024"

[lib]
name = "_rustler"
crate-type = ["cdylib"]

# `pre`: build the standalone preprocessor (reads parquet via polars, parses
#   relbench-3.0.0 manifest.yaml). Needed only to build the `rustler` binary.
# `vecdb`: opt-in FAISS-similarity seed selection in the Sampler. Off by
#   default so the Sampler cdylib and the preprocessor build without FAISS
#   (no cmake/BLAS), keeping the preprocessing environment minimal.
[features]
default = []
pre = ["dep:polars", "dep:serde_yaml"]
vecdb = ["dep:faiss"]

[dependencies]
polars = {version = "*", features = ["parquet", "lazy", "dtype-categorical"], optional = true}
serde_yaml = {version = "*", optional = true}
serde_json = "*"
glob = "*"
itertools = "*"
serde = { version = "*", features = ["derive"] }
rand = "0.9.1"
clap = { version = "*", features = ["derive"] }
pyo3 = { version = "*", features = ["abi3-py312"] }
memmap2 = "*"
rkyv = { version = "*", features = ["pointer_width_64"] }
numpy = { version = "*", features = ["half"] }
indicatif = "*"
half = { version = "*", features = ["rkyv"] }
rayon = "*"
dashmap = "*"
faiss = { version = "*", features = ["static"], optional = true }
